init branch, add chart creation HTML helper, add AniListhelper sketch, replace 'al

--- a/src/common/options.html
+++ b/src/common/options.html
@@ -36,8 +36,8 @@
     <div>
         <h3>AniList</h3>
         <div>
-            <label for="al-enabled">Display AniList:</label>
-            <input type="checkbox" id="al-enabled" class="setting"/>
+            <label for="anilist-enabled">Display AniList:</label>
+            <input type="checkbox" id="anilist-enabled" class="setting"/>
         </div>
     </div>
     <div>
