Improve nav for mobile

--- a/src/common/options.html
+++ b/src/common/options.html
@@ -12,16 +12,16 @@
 
 <body>
     <section class="topnav">
-        <a href="#ratings">Ratings</a>
-        <a href="#reorder">Reorder</a>
-        <a href="#search">Search</a>
-        <a href="#rankings">Rankings</a>
-        <a href="#content-ratings">Content Ratings</a>
-        <a href="#add-links">Additional Links</a>
-        <a href="#misc">Miscellaneous</a>
-        <a href="#google-search">Google Search</a>
-        <a href="#import-export">Import/Export</a>
-        <a href="#debug">Debug</a>
+        <p class="nav-item" sectionId="ratings">Ratings</p>
+        <p class="nav-item" sectionId="reorder">Reorder</p>
+        <p class="nav-item" sectionId="search">Search</p>
+        <p class="nav-item" sectionId="rankings">Rankings</p>
+        <p class="nav-item" sectionId="content-ratings">Content Ratings</p>
+        <p class="nav-item" sectionId="add-links">Additional Links</p>
+        <p class="nav-item" sectionId="misc">Misc</p>
+        <p class="nav-item" sectionId="google-search">Google</p>
+        <p class="nav-item" sectionId="import-export">Import/Export</p>
+        <p class="nav-item" sectionId="debug">Debug</p>
     </section>
 
     <div id="requestalldiv">
