--- a/src/common/options.html
+++ b/src/common/options.html
@@ -137,6 +137,17 @@
         </div>
     </div>
     <div>
+        <h3>DOUBAN</h3>
+        <div>
+            <label for="douban-enabled">Display Douban:</label>
+            <input type="checkbox" id="douban-enabled" permission="https://api.douban.com/*" class="setting"/>
+        </div>
+        <div class="div-request-permission">
+            <label style="color: red;">! Missing Permission !</label>
+            <input type="button" id="douban-permissions" class="request-permission" permissionTarget="douban-enabled" value="Request Permission"/>
+        </div>
+    </div>
+    <div>
         <h3>FilmAffinity</h3>
         <div>
             <label for="filmaff-enabled">Display FilmAffinity:</label>
