--- a/src/common/options.html
+++ b/src/common/options.html
@@ -33,23 +33,6 @@
         <hr width="100%">
     </div>
 
-      
-  <div id="spines">
-    <h3>Spines</h3>
-    <div>
-      <h4>Criterion</h3>
-      <div id="criterion-div">
-        <label for="criterion-spine-default-view">Spine Number View:</label>
-        <select id="criterion-spine-default-view"class="setting">
-          <option value="Row">Row</option>
-          <option value="Column">Column</option>
-          <option value="Left/Right">Left/Right</option>
-        </select>
-        <p>Changes how the Criterion Spine number is displayed.</p>
-      </div>
-    </div>
-  </div>
-
     <!-- Ratings -->
     <div id="ratings">
         <h3>Ratings</h3>
@@ -172,21 +155,22 @@
         </div>
 
         <div>
-          <h4>Douban</h4>
-          <div>
-            <label for="douban-enabled">Display Douban:</label>
-            <input type="checkbox" id="douban-enabled" permission="https://api.douban.com/*" class="setting"/>
-          </div>
-          <div class="div-request-permission">
-            <label style="color: red;">! Missing Permission !</label>
-            <input type="button" id="douban-permissions" class="request-permission" permissionTarget="douban-enabled" value="Request Permission"/>
-          </div>
-          <div>
-            <label for="douban-apikey">API Key:</label>
-            <input type="text" id="douban-apikey" class="setting"/>
-            <p>The Douban API requires an API key to fetch ratings.</p>
+            <h4>Douban</h4>
+            <div>
+                <label for="douban-enabled">Display Douban:</label>
+                <input type="checkbox" id="douban-enabled" permission="https://api.douban.com/*" class="setting"/>
+            </div>
+            <div class="div-request-permission">
+                <label style="color: red;">! Missing Permission !</label>
+                <input type="button" id="douban-permissions" class="request-permission" permissionTarget="douban-enabled" value="Request Permission"/>
+            </div>
+            <div>
+                <label for="douban-apikey">API Key:</label>
+                <input type="text" id="douban-apikey" class="setting"/>
+                <p class="info-tip">The Douban API requires an API key to fetch ratings.</p>
+            </div>
         </div>
-          
+
         <div>
             <h4>FilmAffinity</h4>
             <div>
@@ -279,6 +263,24 @@
             <div>
                 <label for="cinema-enabled">Display CinemaScore:</label>
                 <input type="checkbox" id="cinema-enabled" class="setting"/>
+            </div>
+        </div>
+    </div>
+
+    <hr width="100%">
+
+    <div id="spines">
+        <h3>Physical Media Spines</h3>
+        <div>
+            <h4>Criterion</h3>
+            <div id="criterion-div">
+                <label for="criterion-spine-default-view">Spine Number View:</label>
+                <select id="criterion-spine-default-view"class="setting">
+                    <option value="Row">Row</option>
+                    <option value="Column">Column</option>
+                    <option value="Left/Right">Left/Right</option>
+                </select>
+                <p class="info-tip">Changes how the Criterion Spine number is displayed.</p>
             </div>
         </div>
     </div>
