Blu-ray, RogerEbert links
Also update options CSS

--- a/src/common/options.html
+++ b/src/common/options.html
@@ -64,7 +64,7 @@
                 <label for="tomato-enabled">Display Rotten Tomatoes:</label>
                 <input type="checkbox" id="tomato-enabled" subid="tomato-div" class="setting"/>
             </div>
-            <div id="tomato-div">
+            <div id="tomato-div" class="subsetting">
                 <div>
                     <label for="tomato-critic-enabled">Display critic ratings:</label>
                     <input type="checkbox" id="tomato-critic-enabled" class="setting"/>
@@ -103,7 +103,7 @@
                 <label for="metacritic-enabled">Display Metacritic:</label>
                 <input type="checkbox" id="metacritic-enabled" subid="meta-div"class="setting"/>
             </div>
-            <div id="meta-div">
+            <div id="meta-div" class="subsetting">
                 <div>
                     <label for="metacritic-critic-enabled">Display critic ratings:</label>
                     <input type="checkbox" id="metacritic-critic-enabled" class="setting"/>
@@ -136,7 +136,7 @@
                 <label style="color: red;">! Missing Permission !</label>
                 <input type="button" id="senscritique-permissions" class="request-permission" permissionTarget="senscritique-enabled" value="Request Permission"/>
             </div>
-            <div id="sens-div" class="disabled">
+            <div id="sens-div" class="disabled subsetting">
                 <div>
                     <label for="sens-favorites-enabled">Display recommended count:</label>
                     <input type="checkbox" id="sens-favorites-enabled" class="setting"/>
@@ -204,7 +204,7 @@
                 <label style="color: red;">! Missing Permission !</label>
                 <input type="button" id="allocine-permissions" class="request-permission" permissionTarget="allocine-enabled" value="Request Permission"/>
             </div>
-            <div id="allo-div" class="disabled">
+            <div id="allo-div" class="disabled subsetting">
                 <div>
                     <label for="allocine-users-enabled">Display user ratings:</label>
                     <input type="checkbox" id="allocine-users-enabled" class="setting"/>
@@ -297,7 +297,7 @@
         <label for="override-ratings-order">Override default order:</label>
         <input type="checkbox" id="override-ratings-order" subid="rating-order-div" class="setting"/>
 
-        <div id="rating-order-div">
+        <div id="rating-order-div" class="subsetting">
             <ul id="ratings-order" class="sortable-list">
                 <li class="sortable-item" draggable="true" rating-id="imdb-ratings">IMDb</li>
                 <li class="sortable-item" draggable="true" rating-id="mal-ratings">MyAnimeList</li>
@@ -414,6 +414,21 @@
             <label for="wiki-link-enabled">Display Wikipedia link:</label>
             <input type="checkbox" id="wiki-link-enabled" class="setting"/>
         </div>
+        <div>
+            <h4>Criterion</h4>
+            <label for="criterion-link-enabled">Display Criterion link:</label>
+            <input type="checkbox" id="criterion-link-enabled" class="setting"/>
+        </div>
+        <div>
+            <h4>Blu-ray.com</h4>
+            <label for="bluray-link-enabled">Display Blu-ray.com link:</label>
+            <input type="checkbox" id="bluray-link-enabled" class="setting"/>
+        </div>
+        <div>
+            <h4>RogerEbert.com</h4>
+            <label for="ebert-link-enabled">Display RogerEbert.com link:</label>
+            <input type="checkbox" id="ebert-link-enabled" class="setting"/>
+        </div>
     </div>
 
     <hr width="100%">
@@ -451,7 +466,7 @@
                 <option value="additional">Hide additional ratings</option>
                 <option value="all">Hide all ratings</option>
             </select>
-            <div id="div-ratings-unwatched">
+            <div id="div-ratings-unwatched" class="subsetting">
                 <label for="hide-ratings-unwatched">Only when unwatched:</label>
                 <input type="checkbox" id="hide-ratings-unwatched" class="setting"/>
             </div>
@@ -463,7 +478,7 @@
                 <option value="false">Leave unchanged</option>
                 <option value="all">Hide reviews</option>
             </select>
-            <div id="div-reviews-unwatched">
+            <div id="div-reviews-unwatched" class="subsetting">
                 <label for="hide-reviews-unwatched">Only when unwatched:</label>
                 <input type="checkbox" id="hide-reviews-unwatched" class="setting"/>
             </div>
